Updated README to show JSON output example.

--- a/examples/foo.sass
+++ b/examples/foo.sass
@@ -7,9 +7,10 @@
 // @state .primary - Indicates button is the primary action.
 // @state .smaller - A smaller button
 //
-// @markup
+// @example
 //   <button>This is a button</button>
 //
+// @group buttons
 button {
   padding: 5px 15px;
   line-height: normal;
